--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "timeago-react": "^3.0.2"
   },
   "homepage": "./",
   "main": "public/electron.js",
