ipcMain에 새 윈도우 띄우는 리스너 등록

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "eject": "react-scripts eject",
     "electron": "wait-on http://localhost:3000 && electron .",
     "start": "concurrently \"npm run react-start\" \"npm run electron\"",
-    "build": "npm run react-build && electron-builder --publish=always"
+    "build": "npm run react-build && electron-builder --publish=never"
   },
   "eslintConfig": {
     "extends": "react-app"
